# gstreamer_rs_android_poc

android/app/: build.gradle
android/app/src/androidTest/java/com/mozilla/gstgreetings/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mozilla/gstgreetings/: GreetingsActivity.java  RustGstGreetings.java
android/app/src/main/res/layout/: activity_greetings.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/mozilla/gstgreetings/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
cargo/: Cargo.toml
cargo/lib/: Cargo.toml
cargo/lib/src/: lib.rs
cargo/src/: lib.rs
